PWA-1159 - change the userInvite contextual to make the user and venues tabs fixed and add scroll in the content; change md-checkbox style to align the text vertically;

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -67,7 +67,7 @@ body{
   text-overflow:ellipsis;
   max-width: 90%;
   overflow: hidden;
-  white-space:no-wrap;
+  white-space:nowrap;
 }
 
 .md-input-container-with-no-float {
