--- a/client/app/components/contextual/contextualMenu/components/entitySelect/entitySelect.scss
+++ b/client/app/components/contextual/contextualMenu/components/entitySelect/entitySelect.scss
@@ -5,13 +5,46 @@ $horizontalPadding: 24px;
 .entity-select {
 	padding-top: 24px;
 
+	.channel-name {
+		display: block;
+
+		.md-label, span {
+			display: block;
+		}
+
+		.ellipsis {
+			max-width: 100%;
+		}
+	}
+
 	.checkbox-wrapper {
 		border-bottom: solid 1px rgba(0, 0, 0, 0.12);
-		margin-bottom: $verticalPadding;
 		padding: 0 $horizontalPadding 0 $horizontalPadding;
 
 		&:last-child {
 			border-bottom: 0px;
+		}
+
+		md-checkbox {
+			&[disabled="disabled"] {
+				cursor: not-allowed;
+			}
+
+			.md-label {
+				span {
+					line-height: 20px !important;
+				}
+			}
+		}
+
+		&+.channel-entities {
+			padding-top: $verticalPadding;
+		}
+	}
+
+	.channel-entities {
+		.checkbox-wrapper {
+			margin-bottom: $verticalPadding;
 		}
 	}
 }
